# newGEOPM

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
agent/: CLAUDE.md  CMakeLists.txt  SKELETON.md
agent/include/: AuroraBanditAgent.hpp
agent/src/: ActionGrid.cpp  ActionGrid.hpp  AuroraBanditAgent.cpp  FeatureExtractor.cpp  FeatureExtractor.hpp  LinUCB.cpp  LinUCB.hpp  MinControlGuard.cpp  MinControlGuard.hpp  action_grid_default.json
analysis/: CLAUDE.md  agent_suggestions.md  controls_classification.md  final_agent_knobs.md  knobs_for_agent.md  knobs_per_workload.md  knobs_to_avoid.md  knobs_universal.md  phase0_by_control.csv  phase0_by_control_curves.md  phase0_knob_detail.csv  phase0_knob_summary.csv  results.md  why_each_knob.md
analysis/phase1_5/: additivity.csv  additivity_summary.md  by_combo.csv  cpu_pl_redundancy.csv  perf_factor_redundancy.csv  results.md
analysis/prod_45s/: by_knob.csv  compare_vs_scaling_15s.csv  results.md
analysis/scripts/: additivity_check.py  plot_response_curves.py  summarize_by_control.py  summarize_phase0_knobs.py  summarize_phase0_knobs.sh
benchmarks/: CLAUDE.md  registry.json
benchmarks/babelstream/: README.md  VERSION.txt
benchmarks/by-phase/: README.md
benchmarks/cpu-dgemm/: README.md
benchmarks/dgemm-gpu/: README.md
benchmarks/gpu-bursty-idle/: README.md
benchmarks/gromacs/: DELETE.md  README.md  VERSION.txt
benchmarks/hpcg/: DELETE.md  README.md  VERSION.txt
benchmarks/hpl-cpu/: DELETE.md  README.md  VERSION.txt
benchmarks/lammps/: DELETE.md  README.md  VERSION.txt
docs/: CLAUDE.md  agent-design.md  benchmark-suite-recommendations.md  geopm-aurora.md  glossary.md  open-questions.md  phase0-knob-discovery.md  phase1-sweep-design.md  phase1_5-combo-design.md  phase1_5b-plan.md  phase3-cap-design.md
experiments/: CLAUDE.md
scripts/: CLAUDE.md  build_benchmark.sh  knob_walker.py  per_tile_env.sh  python_common.sh  run_phase0_sweep.py  run_phase0_sweep.sh  run_phase1_5_combos.py  run_phase1_5_combos.sh  submit_phase0.pbs  submit_phase0_all.pbs  submit_phase0_all_repeat.sh  submit_phase0_prod.pbs  submit_phase0_scaling.pbs  submit_phase0_scaling_repeat.sh  submit_phase0_sequential.sh  submit_phase1_5.pbs
(+34 files in other folders)
